# Lasd

./: CMakeLists.txt  README.md
exercise1/: build.sh  main  main.cpp  mybuild.sh
exercise1/container/: container.cpp  container.hpp
exercise1/list/: list.cpp  list.hpp
exercise1/vector/: vector.cpp  vector.hpp
exercise1/zmytest/: test.cpp  test.hpp
exercise2/: main.cpp
exercise2/queue/: queue.hpp
exercise2/queue/lst/: queuelst.cpp  queuelst.hpp
exercise2/queue/vec/: queuevec.cpp  queuevec.hpp
exercise2/stack/: stack.hpp
exercise2/stack/vec/: stackvec.cpp  stackvec.hpp
exercise2/vector/: vector.cpp
exercise2/zlasdtest/exercise2/: simpletest.cpp
exercise2/zmytest/: test.cpp  test.hpp
exercise3/: main.cpp
exercise3/binarytree/: binarytree.cpp  binarytree.hpp
exercise3/binarytree/lnk/: binarytreelnk.cpp  binarytreelnk.hpp
exercise3/binarytree/vec/: binarytreevec.cpp  binarytreevec.hpp
exercise3/stack/: stack.hpp
exercise3/zmytest/: test.cpp  test.hpp
exercise4/: main.cpp
exercise4/binarytree/: binarytree.cpp
exercise4/binarytree/lnk/: binarytreelnk.hpp
exercise4/binarytree/vec/: binarytreevec.cpp
exercise4/bst/: bst.cpp  bst.hpp
exercise4/container/: container.hpp
exercise4/iterator/: iterator.hpp
exercise4/stack/lst/: stacklst.cpp
exercise4/zlasdtest/: test.cpp
exercise4/zmytest/: test.cpp  test.hpp
exercise5/: build.sh  main.cpp
exercise5/binarytree/: binarytree.cpp
exercise5/binarytree/lnk/: binarytreelnk.cpp  binarytreelnk.hpp
exercise5/bst/: bst.hpp
exercise5/matrix/: matrix.hpp
exercise5/matrix/csr/: matrixcsr.cpp  matrixcsr.hpp
exercise5/matrix/vec/: matrixvec.cpp  matrixvec.hpp
exercise5/queue/: queue.hpp
exercise5/stack/lst/: stacklst.hpp
exercise5/vector/: vector.cpp  vector.hpp
exercise5/zlasdtest/: test.cpp
exercise5/zmytest/: test.cpp  test.hpp
